# preparation-chemistry-exam

./: .env  .gitignore  README.md  pyproject.toml
app/: admin.py  constants.py  forms.py  models.py  views.py
app/api/: yandex_gpt_api.py  yandex_gpt_api_test.py
app/base/: request_base.py  util.py
app/core/: gpt.py  prompt.py  test_gpt.py  yandex_gpt.py  yandex_gpt_client.py  yandex_gpt_client_test.py
app/migrations/: 0001_initial.py
app/static/styles/: account.css  common.css  create_task.css  login.css  main_page.css  register_user.css
app/templates/: materials.html  navbar.html  register_user.html  train_variations.html
app/templates/account/: login.html  (+2 more)
back/: db.sqlite3
back/app/: admin.py  auth.py  context_processors.py  decorators.py  forms.py  models.py  urls.py
back/main/: asgi.py  settings.py  urls.py  wsgi.py
main/: settings.py  urls.py
static/css/: article_detail.css  articles.css  auth.css  class.css  dashboard.css  forms.css  home.css  materials.css  news.css  print.css  profile.css  styles.css  teacher.css  teacher_dashboard.css  teacher_rating.css  teacher_ratings.css  tests.css
static/js/: animations.js  article-api.js  auth.js  class.js  login.js  main.js  modal.js  news-api.js  register.js  teacher_dashboard.js  teacher_rating.js  test_result.js  utilities.js
templates/: article_detail.html  articles.html  base.html  class.html  home.html  material_detail.html  materials.html  news_detail.html
templates/admin/: news_changelist.html
templates/auth/: login.html  register.html
templates/profile/: student_profile.html  teacher_profile.html
templates/ratings/: teacher_ratings.html
templates/teacher/: dashboard.html  student_detail.html  student_tests.html
templates/tests/: task_create.html  test_detail.html  test_list.html  test_list_alt.html  test_result.html  test_review.html  test_review_detail.html  test_start.html  test_take.html
(+52 files in other folders)
